@@ -39,6 +39,8 @@ stopwords = VCS
 stopwords = PASSed
 stopwords = ActionBatch
 stopwords = subclasses
+stopwords = noinit
+stopwords = nocommit
 
 ; metadata
 [AutoPrereqs]       ; find prereqs from code
