@@ -1,6 +1,6 @@
 package App::Pinto::Admin::Command::add;
 
-# ABSTRACT: add your own distributions to the repository
+# ABSTRACT: add local distributions to the repository
 
 use strict;
 use warnings;
@@ -38,7 +38,7 @@ sub usage_desc {
     my ($command) = $self->command_names();
 
     my $usage =  <<"END_USAGE";
-%c --repos=PATH $command [OPTIONS] DISTRIBUTION_FILE_OR_URL1 [DISTRIBUTION_FILE_OR_URL2 ...]
+%c --repos=PATH $command [OPTIONS] DISTRIBUTION_FILE_OR_URL ...
 %c --repos=PATH $command [OPTIONS] < LIST_OF_DISTRIBUTION_FILES_OR_URLS
 END_USAGE
 
@@ -66,3 +66,74 @@ sub execute {
 1;
 
 __END__
+
+=head1 SYNOPSIS
+
+  pinto-admin --repos=/some/dir add [OPTIONS] DISTRIBUTION_FILE_OR_URL ...
+  pinto-admin --repos=/some/dir add [OPTIONS] < LIST_OF_DISTRIBUTION_FILES_OR_URLS
+
+=head1 DESCRIPTION
+
+This command adds a local distribution to the repository.  Packages in
+local distributions always mask packages in foreign distributions.
+When a distribution is first added to the repository, the author
+becomes the owner of the distribution Thereafter, only the same author
+can add a new version of that distribution. [Technically speaking, the
+author really owns the *packages* in the distribution, not the
+distribution itself.]
+
+=head1 COMMAND ARGUMENTS
+
+Arguments to this command are paths to the distribution files that you
+wish to add.  Each of these files must exist and must be readable.  If
+a path looks like a URL, then the distribution first retrieved
+from that URL and stored in a temporary file, which is subsequently
+added.
+
+You can also pipe arguments to this command over STDIN.  In that case,
+blank lines and lines that look like comments (i.e. starting with "#"
+or ';') will be ignored.
+
+=head1 COMMAND OPTIONS
+
+=over 4
+
+=item --author=NAME
+
+Sets your identity as a distribution author.  The NAME can only be
+alphanumeric characters only (no spaces) and will be forced to
+uppercase.  The default is your username.
+
+=item --message=MESSAGE
+
+Prepends the MESSAGE to the VCS log message that L<Pinto> generates.
+This is only relevant if you are using a VCS-based storage mechanism
+for L<Pinto>.
+
+=item --nocommit
+
+Prevents L<Pinto> from committing changes in the repository to the VCS
+after the operation.  This is only relevant if you are
+using a VCS-based storage mechanism.  Beware this will leave your
+working copy out of sync with the VCS.  It is up to you to then commit
+or rollback the changes using your VCS tools directly.  Pinto will not
+commit old changes that were left from a previous operation.
+
+=item --noinit
+
+Prevents L<Pinto> from pulling/updating the repository from the VCS
+before the operation.  This is only relevant if you are using a
+VCS-based storage mechanism.  This can speed up operations
+considerably, but should only be used if you *know* that your working
+copy is up-to-date and you are going to be the only actor touching the
+Pinto repository within the VCS.
+
+=item --tag=NAME
+
+Instructs L<Pinto> to tag the head revision of the repository at NAME.
+This is only relevant if you are using a VCS-based storage mechanism.
+The syntax of the NAME depends on the type of VCS you are using.
+
+=back
+
+=cut
