@@ -25,6 +25,7 @@ sub opt_spec {
     return ( $self->SUPER::opt_spec(),
 
         [ 'message|m=s' => 'Prepend a message to the VCS log' ],
+        [ 'nocommit'    => 'Do not commit changes to VCS' ],
         [ 'noinit'      => 'Do not pull/update from VCS' ],
         [ 'tag=s'       => 'Specify a VCS tag name' ]
     );
@@ -88,3 +89,60 @@ END_MESSAGE
 1;
 
 __END__
+
+=head1 SYNOPSIS
+
+  pinto-admin --repos=/some/dir clean [OPTIONS]
+
+=head1 DESCRIPTION
+
+
+This command deletes any distribution in the repository that is not
+currently listed in the index.  This usually happens automatically,
+unless you've set the C<nocleanup> parameter in your repository
+configuration.  Beware that running the C<clean> command will make it
+impossible to install outdated distributions from your repository, and
+the only way to get them back is to use the C<add> command again (or
+rollback, if using VCS).
+
+=head1 COMMAND ARGUMENTS
+
+None.
+
+=head1 COMMAND OPTIONS
+
+=over 4
+
+=item --message=MESSAGE
+
+Prepends the MESSAGE to the VCS log message that L<Pinto> generates.
+This is only relevant if you are using a VCS-based storage mechanism
+for L<Pinto>.
+
+=item --nocommit
+
+Prevents L<Pinto> from committing changes in the repository to the VCS
+after the operation.  This is only relevant if you are
+using a VCS-based storage mechanism.  Beware this will leave your
+working copy out of sync with the VCS.  It is up to you to then commit
+or rollback the changes using your VCS tools directly.  Pinto will not
+commit old changes that were left from a previous operation.
+
+=item --noinit
+
+Prevents L<Pinto> from pulling/updating the repository from the VCS
+before the operation.  This is only relevant if you are using a
+VCS-based storage mechanism.  This can speed up operations
+considerably, but should only be used if you *know* that your working
+copy is up-to-date and you are going to be the only actor touching the
+Pinto repository within the VCS.
+
+=item --tag=NAME
+
+Instructs L<Pinto> to tag the head revision of the repository at NAME.
+This is only relevant if you are using a VCS-based storage mechanism.
+The syntax of the NAME depends on the type of VCS you are using.
+
+=back
+
+=cut
