@@ -49,3 +49,28 @@ sub execute {
 1;
 
 __END__
+
+=head1 SYNOPSIS
+
+  pinto-admin --repos=/some/dir create
+
+=head1 DESCRIPTION
+
+This command creates a new, empty repository.  If the target directory
+does not exist, it will be created for you.  If it does already exist,
+then it must be empty.  The new repository will contain empty index
+files and the default configuration.
+
+If you are going to be using a VCS-based Store for your repository,
+then the creation process is a little more complicated.  See the
+documentation of your chosen Store class for details.
+
+=head1 COMMAND ARGUMENTS
+
+None.
+
+=head1 COMMAND OPTIONS
+
+None.
+
+=cut
