@@ -54,3 +54,41 @@ sub execute {
 1;
 
 __END__
+
+=head1 SYNOPSIS
+
+  pinto-admin --repos=/some/dir nop [OPTIONS]
+
+=head1 DESCRIPTION
+
+This command is a no-operation.  It locks and initializes the
+repository, but does not perform any operations.  This is really only
+used for diagnostic purposes.  So don't worry about it too much.
+
+Note this command never changes the state of your repository.
+
+=head1 COMMAND ARGUMENTS
+
+None.
+
+=head1 COMMAND OPTIONS
+
+=over 4
+
+=item --noinit
+
+Prevents L<Pinto> from pulling/updating the repository from the VCS
+before the operation.  This is only relevant if you are using a
+VCS-based storage mechanism.  This can speed up operations
+considerably, but should only be used if you *know* that your working
+copy is up-to-date and you are going to be the only actor touching the
+Pinto repository within the VCS.
+
+=item --sleep=N
+
+Directs L<Pinto> to sleep for N seconds before releasing the lock and
+exiting.  Default is 0.
+
+=back
+
+=cut
