@@ -56,3 +56,57 @@ sub execute {
 1;
 
 __END__
+
+=head1 SYNOPSIS
+
+  pinto-admin --repos=/some/dir rebuild [OPTIONS]
+
+=head1 DESCRIPTION
+
+In the event your index file becomes corrupt or goes missing, you can
+use this command to rebuild it.  Note this is not the same as
+re-indexing all your distributions.  Rebuilding the index simply means
+regenerating the index file from the information that L<Pinto> already
+has about your distributions.
+
+=head1 COMMAND ARGUMENTS
+
+None.
+
+=head1 COMMAND OPTIONS
+
+=over 4
+
+=item --message=MESSAGE
+
+Prepends the MESSAGE to the VCS log message that L<Pinto> generates.
+This is only relevant if you are using a VCS-based storage mechanism
+for L<Pinto>.
+
+=item --nocommit
+
+Prevents L<Pinto> from committing changes in the repository to the VCS
+after the operation.  This is only relevant if you are
+using a VCS-based storage mechanism.  Beware this will leave your
+working copy out of sync with the VCS.  It is up to you to then commit
+or rollback the changes using your VCS tools directly.  Pinto will not
+commit old changes that were left from a previous operation.
+
+=item --noinit
+
+Prevents L<Pinto> from pulling/updating the repository from the VCS
+before the operation.  This is only relevant if you are using a
+VCS-based storage mechanism.  This can speed up operations
+considerably, but should only be used if you *know* that your working
+copy is up-to-date and you are going to be the only actor touching the
+Pinto repository within the VCS.
+
+=item --tag=NAME
+
+Instructs L<Pinto> to tag the head revision of the repository at NAME.
+This is only relevant if you are using a VCS-based storage mechanism.
+The syntax of the NAME depends on the type of VCS you are using.
+
+=back
+
+=cut
