@@ -38,7 +38,7 @@ sub usage_desc {
     my ($command) = $self->command_names();
 
  my $usage =  <<"END_USAGE";
-%c --repos=PATH $command [OPTIONS] DISTRIBUTION_NAME1 [DISTRIBUTION_NAME2 ...]
+%c --repos=PATH $command [OPTIONS] DISTRIBUTION_NAME ...
 %c --repos=PATH $command [OPTIONS] < LIST_OF_DISTRIBUTION_NAMES
 END_USAGE
 
@@ -66,3 +66,80 @@ sub execute {
 1;
 
 __END__
+
+=head1 SYNOPSIS
+
+  pinto-admin --repos=/some/dir remove [OPTIONS] DISTRIBUTION_NAME ...
+  pinto-admin --repos=/some/dir remove [OPTIONS] < LIST_OF_DISTRIBUTION_NAMES
+
+=head1 DESCRIPTION
+
+This command removes a local distribution from the repository.  You
+cannot remove foreign distributions that were pulled in from another
+repository using the C<update> command (however you can mask them by
+adding your own versions).
+
+=head1 COMMAND ARGUMENTS
+
+Arguments to this command are the names of the distributions you wish
+to remove.  You must specify the complete distribution name, including
+version number and extension.  The precise identity of the
+distribution that will be removed depends on who you are.  So if you
+are C<JOE> and you ask to remove C<Foo-1.0.tar.gz> then you are really
+asking to remove F<J/JO/JOE/Foo-1.0.tar.gz>.
+
+To remove a distribution that was added by another author, use the
+C<--author> option to change who you are.  Or you can just
+explicitly specify the full identity of the distribution.  So the
+following two examples are equivalent:
+
+  $> pinto-admin --repos=/some/dir remove --author=SUSAN Foo-1.0.tar.gz
+  $> pinto-admin --repos=/some/dir remove S/SU/SUSAN/Foo-1.0.tar.gz
+
+You can also pipe arguments to this command over STDIN.  In that case,
+blank lines and lines that look like comments (i.e. starting with "#"
+or ";") will be ignored.
+
+=head1 COMMAND OPTIONS
+
+=over 4
+
+=item --author=NAME
+
+Sets your identity as a distribution author.  The NAME can only be
+alphanumeric characters only (no spaces) and will be forced to
+uppercase.  The default is your username.
+
+=item --message=MESSAGE
+
+Prepends the MESSAGE to the VCS log message that L<Pinto> generates.
+This is only relevant if you are using a VCS-based storage mechanism
+for L<Pinto>.
+
+=item --nocommit
+
+Prevents L<Pinto> from committing changes in the repository to the VCS
+after the operation.  This is only relevant if you are
+using a VCS-based storage mechanism.  Beware this will leave your
+working copy out of sync with the VCS.  It is up to you to then commit
+or rollback the changes using your VCS tools directly.  Pinto will not
+commit old changes that were left from a previous operation.
+
+=item --noinit
+
+Prevents L<Pinto> from pulling/updating the repository from the VCS
+before the operation.  This is only relevant if you are using a
+VCS-based storage mechanism.  This can speed up operations
+considerably, but should only be used if you *know* that your working
+copy is up-to-date and you are going to be the only actor touching the
+Pinto repository within the VCS.
+
+=item --tag=NAME
+
+Instructs L<Pinto> to tag the head revision of the repository at NAME.
+This is only relevant if you are using a VCS-based storage mechanism.
+The syntax of the NAME depends on the type of VCS you are using.
+
+=back
+
+=cut
