@@ -56,3 +56,65 @@ sub execute {
 1;
 
 __END__
+
+=head1 SYNOPSIS
+
+  pinto-admin --repos=/some/dir update [OPTIONS]
+
+=head1 DESCRIPTION
+
+This command pulls the latest versions of all distributions from a
+source repository (often a CPAN mirror) into your repository.  Any
+locally added distributions will always mask those that you pulled
+from another repository.
+
+The address of the source repository is defined in the configuration
+file at F<config/pinto.ini> within your repository. See
+L<Pinto::Config> for more information on setting that.
+
+=head1 COMMAND ARGUMENTS
+
+None
+
+=head1 COMMAND OPTIONS
+
+=over 4
+
+=item --force
+
+Forces action, even if the indexes on the source repository appear to
+be unchanged.
+
+=item --message=MESSAGE
+
+Prepends the MESSAGE to the VCS log message that L<Pinto> generates.
+This is only relevant if you are using a VCS-based storage mechanism
+for L<Pinto>.
+
+=item --nocommit
+
+Prevents L<Pinto> from committing changes in the repository to the VCS
+after the operation.  This is only relevant if you are
+using a VCS-based storage mechanism.  Beware this will leave your
+working copy out of sync with the VCS.  It is up to you to then commit
+or rollback the changes using your VCS tools directly.  Pinto will not
+commit old changes that were left from a previous operation.
+
+=item --noinit
+
+Prevents L<Pinto> from pulling/updating the repository from the VCS
+before the operation.  This is only relevant if you are using a
+VCS-based storage mechanism.  This can speed up operations
+considerably, but should only be used if you *know* that your working
+copy is up-to-date and you are going to be the only actor touching the
+Pinto repository within the VCS.
+
+=item --tag=NAME
+
+Instructs L<Pinto> to tag the head revision of the repository at NAME.
+This is only relevant if you are using a VCS-based storage mechanism.
+The syntax of the NAME depends on the type of VCS you are using.
+
+=back
+
+=cut
